Update many things
