# src/routes/index.js
@@ -10,11 +10,17 @@ import { verifyUser } from "../common/middlewares/verifyUser.js";
 import { authMiddleware } from "../common/middlewares/authMiddleware.js";
 import commentRouter from "./../modules/comment/comment.routes.js";
 import userRoutes from "../modules/user/user.routes.js";
+import sizeRoutes from "../modules/size/size.routes.js";
+import colorRoutes from "../modules/color/color.routes.js";
+import brandRouter from "../modules/brand/brand.routes.js";
 const router = Router();
 
 router.use("/auth", authRoutes);
 router.use("/products", productRotes);
+router.use("/sizes", sizeRoutes);
+router.use("/colors", colorRoutes);
 
+router.use("/brand", brandRouter);
 router.use("/categories", categoryRoutes);
 router.use("/sub-categories", subCategoryRoutes);
 
